--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
 <td> <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}.</div>  
 <script type="text/javascript" src="//counter.websiteout.net/js/28/6/4/1"></script></td> 
 <td>锲而含之，朽木不折；锲而不舍，金石可镂。——《荀子劝学》 </td>
-<td><a href="https://clustrmaps.com/site/1bqdl"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=pL2YjwZFmvN65U0II3-AGNSIiQERZcQI6_VoY_-jnyw&cl=ffffff" /></a></td>
-<td> <b>Please feel free to contact me</b> <br> Emails: eejwentong@ust.hk; jwentong@foxmail.com  <br>Address：Room 3112A, Acdemic Building, HKUST, <br>Clear Water Bay, Kowloon, NT, Hong Kong<br> </td>
+<td><a href="https://www.revolvermaps.com/livestats/5yv0lmdbab2/"><img src="//rf.revolvermaps.com/h/m/a/0/ff007e/128/0/5yv0lmdbab2.png" width="256" height="128" alt="Map" style="border:0;"></a>
+<td> <b>Please feel free to contact me</b> <br> Emails: minmh@cumt.edu.cn;  <br>Address：Room B424, Information and Control Building, CUMT, Xuzhou, Jiangsu, China<br> </td>
 </tr>
 </table>
 
